--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
       crossorigin="anonymous"
     ></script>
     
-  <script type="text/javascript" src="/cococo/vendor.dll.js"></script><script type="text/javascript" src="/cococo/bundle.ee23cf639bbc6240c05d.min.js"></script></body>
+  <script type="text/javascript" src="/cococo/bundle.4b361e1c84a91e55c9c3.min.js"></script></body>
 </html>
